# choose-your-adventure

./: CMakeLists.txt  README.md  main.cpp  main.h
gameStart/: areaDarkForest.cpp  areaDarkForest.h
hedgehogGameStart/: optionPlayMenu.cpp
menuSelection/: optionPlayMenu.cpp  optionPlayMenu.h  optionRaceMenu.cpp  optionRaceMenu.h  optionSettingsMenu.cpp  optionSettingsMenu.h
